--- a/bab2.html
+++ b/bab2.html
@@ -53,8 +53,7 @@
 										</ul>
 
 									</li>
-									<li class="menu-item"><a href="#featured-books" class="nav-link">Materi</a></li>
-									<li class="menu-item"><a href="#popular-books" class="nav-link">TEAM</a></li>
+									
 								</ul>
 
 								<div class="hamburger">
@@ -123,9 +122,8 @@
 		<div class="inner-content">
 			<h2 class="section-title divider">Quote of the day</h2>
 			<blockquote data-aos="fade-up">
-				<q>“The more that you read, the more things you will know. The more that you learn, the more places
-					you’ll go.”</q>
-				<div class="author-name">Dr. Seuss</div>
+				<q>Ide yang hebat saja tidak cukup, kekuatan terletak pada cara kita menyampaikan dan meyakinkan dunia bahwa ide tersebut layak diwujudkan.</q>
+				<div class="author-name">TEAM 4</div>
 			</blockquote>
 		</div>
 	</section>
